trunk/Archive2/e4/d0d5a3085f0acd/output
main.cpp: In function 'int main()':
main.cpp:4:39: error: unable to deduce 'auto' from '& main()::<lambda(auto:1)>'
     auto ptm = &decltype(f)::operator();
                                       ^
